--- a/HasherLibrary/HasherLibrary.csproj
+++ b/HasherLibrary/HasherLibrary.csproj
@@ -2,13 +2,16 @@
 
 	<PropertyGroup>
 		<TargetFramework>net5.0</TargetFramework>
-		<Version>1.0.1</Version>
+		<Version>1.0.2</Version>
 		<PackageLicenseExpression>MIT</PackageLicenseExpression>
 		<Title>Hasher Library</Title>
 		<RepositoryUrl>https://github.com/Ian-Inizias/HasherLibrary</RepositoryUrl>
+		<Company>INIZIAS SOLUTIONS PROVIDER, S.L.</Company>
 		<Copyright>Copyright (c) INIZIAS SOLUTIONS PROVIDER, S.L. 2021</Copyright>
 		<Authors>Ian-Inizias</Authors>
 		<PackageIcon>icon.png</PackageIcon>
+		<PackageTags>Hasher;IdentityV3;Hasher Library</PackageTags>
+		<Description>With this package you are able to create identity V3 password hashes without using the identity built in mechanisms.</Description>
 	</PropertyGroup>
 
 	<ItemGroup>
